     live recording mode (as intended), it starts on the selected step
     in step recording mode

   o Purpose of Record and Live Button & LED change:
     they switch between record (and live) mode w/o changing to the Jam page

   o new button/LED combo: JAM_LIVE and JAM_STEP: they switch to the JAM
     page and select Live resp. Step recording mode

   o New option page item #10 "Initial Gate Trigger Layer" 
     (empty or trigger on each 4th step)

   o removed obsolete (non-working) pattern based scale control


MIDIboxSEQ V4.090
~~~~~~~~~~~~~~~~~

   o Fx->Scale page: the configured scale is now displayed at the right
     half of the page

   o Track duplication now also possible with COPY+PASTE in UTILITY page

   o Track selections (Parameter/Trigger Layer, instrument, step view)
     can now be handled individually for each track.
     This function can be enabled in the UTILITY->Opt menu (item #9/16)

   o added BLM fader configuration to UTILITY->Opt menu (item #14/16)
     Up to 8 faders can be connected to the BLM16x16+X
     They can send a CC value either to a statically assigned Port/Chn, or to
     the Port/Chn defined by the track.

     Optionally value can be sent with inverted polarity (turn encoder beyond CC#127).

     Additional (internal) functions can be added in future.

   o BLM in keyboard mode: transpose only takes place if track not in normal
     (no transpose) mode!

   o if a track plays a sustained note, and doesn't play a step anymore
     (all gates cleared), the sustain will be cancled now

   o improved Auto Start in Jam page

   o Jam recording options are now stored/restored in/from session 
     configuration file

   o SONG button has now the same function like the SELECT button: it shows
     a configuration page. This makes it more consistent to the EDIT button.
     In future, the SELECT button might get a new function in SONG page.

   o Song mode: if Steps per Measure < Steps for Pattern synchronisation, the