@@ -33,6 +33,8 @@ MIDIboxSEQ V4.091
    o new button/LED combo: JAM_LIVE and JAM_STEP: they switch to the JAM
      page and select Live resp. Step recording mode
 
+   o Transpose page now allows selection based on Scale
+
    o New option page item #10 "Initial Gate Trigger Layer" 
      (empty or trigger on each 4th step)
 
